--- a/index.css
+++ b/index.css
@@ -1,8 +1,36 @@
+* {
+ -webkit-touch-callout: none; /* iOS Safari */
+   -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+      -moz-user-select: none; /* Old versions of Firefox */
+       -ms-user-select: none; /* Internet Explorer/Edge */
+           user-select: none; /* Non-prefixed version, currently
+                                 supported by Chrome, Edge, Opera and Firefox */
+}
+html, body{
+ overflow: hidden;
+ height:100%;
+}
+iframeDiv, iframe{
+ position: absolute;
+ width: 100%;
+ height:100%;
+ left:0px;
+ top:0px;
+ border: 0px solid transparent;
+ pointer-events: none;
+}
 a.bookmarlet{
  cursor: move; /* fallback if grab cursor is unsupported */
  cursor: grab;
  cursor: -moz-grab;
  cursor: -webkit-grab;
+ 
+ margin: 0;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%); 
 }
 a.bookmarlet span{
  display:none;
